# libini

./: Makefile  Makefile.am  Makefile.in  config.h.in  config.h.in~  configure  configure.ac  configure~  ini-def.h  ini.c  ini.h  list.c  list.h  main.c  parse.c  parse.h  test.ini
autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.1  traces.2  traces.3  traces.4
test/: Makefile  Makefile.am  Makefile.in  ddraw.ini  ddraw.ini.bak  main  main.c
